# scip

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakeSettings.json
examples/: CMakeLists.txt
examples/LP/: CMakeLists.txt  problem_0.cpp  problem_0_2.cpp  problem_1.cpp  problem_1.lp  problem_1.mps  problem_2.cpp  problem_2.lp  problem_2.mps  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_scs_0.cpp  problem_scs_1.cpp  problem_scs_2.cpp  problem_scs_random.h
src/lpi/: lpi_scs.c  lpi_scs.cpp
src/scip/: def.h
tests/: CMakeLists.txt
tests/src/lpi/: bases.c
