cmake_minimum_required(VERSION 3.3)

project(LP)
# include(CTest)

if(TARGET SCIP::SCIP)
  # find package by SCIP PATH
  find_package(SCIP CONFIG PATHS ${SCIP_BINARY_DIR} REQUIRED)
else()
  find_package(SCIP REQUIRED)
endif()

include_directories(${SCIP_INCLUDE_DIRS})

add_executable(lp_problem_0 "problem_0.cpp")
add_executable(lp_problem_0_2 "problem_0_2.cpp")
add_executable(lp_problem_1 "problem_1.cpp")
add_executable(lp_problem_2 "problem_2.cpp")
add_executable(lp_problem_3 "problem_3.cpp")
add_executable(lp_problem_4 "problem_4.cpp")
add_executable(lp_problem_5 "problem_5.cpp")
#if(scs_FOUND)
    # add_compile_definitions(USE_LAPACK)
    add_executable(lp_problem_scs_0 "problem_scs_0.cpp")
    add_executable(lp_problem_scs_1 "problem_scs_1.cpp")
    add_executable(lp_problem_scs_2 "problem_scs_2.cpp")
#endif()

target_link_libraries(lp_problem_0 ${SCIP_LIBRARIES})
target_link_libraries(lp_problem_0_2 ${SCIP_LIBRARIES})
target_link_libraries(lp_problem_1 ${SCIP_LIBRARIES})
target_link_libraries(lp_problem_2 ${SCIP_LIBRARIES})
target_link_libraries(lp_problem_3 ${SCIP_LIBRARIES})
target_link_libraries(lp_problem_4 ${SCIP_LIBRARIES})
target_link_libraries(lp_problem_5 ${SCIP_LIBRARIES})
#if(scs_FOUND)
    # add_compile_definitions(USE_LAPACK)
    target_link_libraries(lp_problem_scs_0 ${SCIP_LIBRARIES})
    target_link_libraries(lp_problem_scs_1 ${SCIP_LIBRARIES})
    target_link_libraries(lp_problem_scs_2 ${SCIP_LIBRARIES})
#endif()
if( TARGET examples )
    add_dependencies( examples lp_problem_4 )
endif()

# enable_testing()
